--- a/tagsync/Dockerfile
+++ b/tagsync/Dockerfile
@@ -1,16 +1,21 @@
+
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
-COPY . ./
+COPY ./tagsync ./tagsync
 
-RUN dotnet publish ./tagsync.csproj -c Release -o out
+
+WORKDIR /app/tagsync
+RUN dotnet publish tagsync.csproj -c Release -o /app/out
+
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 
+
 COPY --from=build /app/out .
+
 
 ENV ASPNETCORE_URLS=http://+:8080
 EXPOSE 8080
-
 ENTRYPOINT ["dotnet", "tagsync.dll"]
